<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">@string/app_name_free</string>
    <string name="app_name_free">SQL Master Free</string>
    <string name="app_name_pro">SQL Master</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sqlite">SQLite</string>
    <string name="my_sql">My SQL</string>
    <string name="overview">Overview</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="info">Info</string>
    <string name="version">v%s</string>
    <string name="history">History</string>
    <string name="favorites">Favorites</string>
    <string name="apps">Apps</string>
    <string name="files">Files</string>
    <string name="scanning_installed_apps">Scanning installed applications</string>
    <string name="searching_databases">Searching for databases</string>
    <string name="no_databases">No databases found for %s</string>
    <string name="installed_applications">Installed applications: %s</string>
    <string name="favorite_databases">Favorite databases: %s</string>
    <string name="viewed_databases">Viewed databases: %s</string>
    <string name="cloud">Cloud</string>
    <string name="signed_in_fmt"><![CDATA[
    Signed in as: <font color=\'#4CAF50\'>%s</font>
    ]]></string>
    <string name="signed_out">Please sign in to continue...</string>
    <string name="cant_read_database_file">Unable to read database file.</string>
    <string name="cant_write_database_file">Warning. Database file is now writable, you wont be able to modify database.</string>
    <string name="failed_to_verify_database">Failed to verify database file. Either file is not SQLite 3 database or some other error occured.</string>
    <string name="login_info"><b>Warning</b>\nTo backup your data to the cloud you must signing with google.\nGoogle is used only as signin method, all data is stored on SQL Master servers.\nWe CAN NOT guaranty your data safety, all information is saved in plain format.\nWe may introduce data encryption in future versions.\nOnly database information is backed-up, not whole database content</string>
    <string name="enable_sync">Cloud Sync Enabled</string>
    <string name="sync_history">Sync History</string>
    <string name="sync_favorites">Sync Favorites</string>
    <string name="sync_credentials">Sync Database Credentials</string>
    <string name="sync_credentials_desc">Credentials are encrypted</string>
    <string name="sync_query_history">Sync query history</string>
    <string name="sync_settings">Sync Settings</string>
    <string name="sync_settings_desc">Sync application settings</string>
    <string name="last_sync"><![CDATA[
    Last sync time: <font color=\'#4CAF50\'>%s</font>
    ]]></string>
    <string name="sync_now">Sync Now</string>
    <string name="delete_remote">Delete Cloud Data</string>
    <string name="failed_auth">Authentication failed.</string>
    <string name="invalid_token">Failed to get access token</string>
    <string name="warning">Warning!</string>
    <string name="cancel">Cancel</string>
    <string name="i_understand">I Understand</string>
    <string name="my_sql_warning">We CAN NOT guaranty your data safety, all information is saved in plain format.\nYou should NOT include mysql databases in sync as it contains database credentials.\nFuture version may introduce data encryption.</string>
    <string name="never">Never</string>
    <string name="sync_status"><![CDATA[
    Sync Status: <font color=\'#4CAF50\'>%s</font>
    ]]></string>
    <string name="checking_1">checking.</string>
    <string name="checking_2">checking..</string>
    <string name="checking_3" tools:ignore="TypographyEllipsis">checking...</string>
    <string name="idle">Idle</string>
    <string name="sync_data">Sync Data</string>
    <string name="no_databases_mysql">No Databases Found</string>
    <string name="postgresql">PostgreSQL</string>
    <string name="database_url_hint">Server hostmane or ip address</string>
    <string name="database_port_hint">Server port. Leave empty for default port</string>
    <string name="database_name_hint">Database name</string>
    <string name="database_username_hint">Database username</string>
    <string name="database_password_hint">Database password</string>
    <string name="save">Save</string>
    <string name="sql_username_password_warning"><b>Warning</b>\nCredentials are NOT encrypted. While on non-rooted devices credentials are pretty secure, on rooted devices any application can read this information.\nBy default cloud synchronization of sensitive (non-sqlite) databases is disabled.</string>
    <string name="database_name_is_required">Database name is required</string>
    <string name="database_server_required">Database hostname/ip is required</string>
    <string name="username_required">Username is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="add_mysql_database">Add new database</string>
    <string name="comming_soon">Coming Soon ...</string>
    <string name="look_and_feel"><![CDATA[Look & Feel]]></string>
    <string name="syntax_highlight_theme">Syntax Highlight Theme</string>
    <string name="action_add_favorite">Add to favorites</string>
    <string name="other">Other</string>
    <string name="debug">Debug</string>
    <string name="debug_summary">Enables logging</string>
    <string name="notifications">Notifications</string>
    <string name="update_notifications">Update notifications</string>
    <string name="update_notifications_summary">Show notification when new version is available.</string>
    <string name="cloud_sync_notification">Cloud Sync</string>
    <string name="cloud_sync_notif_summary">Show notification when cloud sync is in progress</string>
    <string name="action_search">Search</string>
    <string name="sync_notification_title">Cloud Sync</string>
    <string name="sync_notification_text">Cloud sync in progress...</string>
    <string name="set_password_info"><b>Enter your password.</b>\nIf this is first time that you are using SQL Master then enter new password.\nIf you already used SQL Master before then you must enter your old password or existing backup wont work.</string>
    <string name="set_password_warning"><b>WARNING</b>\nYour device is root-ed\nEncryption key generated from your password is stored in applications private folder.\nEncryption key is used to encrypt sensitive information (like database credentials)\nNormally this encryption key is accessible only from this application.\nHowever, on root-ed device, any application can potentially get your encryption key.\nMake sure that you trust all your apps that are given root access.</string>
    <string name="password">Password</string>
    <string name="set_password">Set Password</string>
    <string name="pasword_short">password must be min 8 characters long.</string>
    <string name="password_number">Password must contain at least one number.</string>
    <string name="password_uppercase">Password must contain at leas one uppercase character.</string>
    <string name="password_lowercase">Password must contain at leas one lowercase character.</string>
    <string name="sync_databases">Sync Databases</string>
    <string name="sync_databases_warning">Only database configuration is synchronized (server, username, password...), not actual database contents</string>
    <string name="query_ok">Query OK, %d rows affected</string>
    <string name="empty_credentials_warning">Database is missing username and/or password.\nThis can happen when you restore backup that cannot be decrypted (you entered dfferent password than the one used to encrypt database).</string>
    <string name="ok">OK</string>
    <string name="test_connection">Test Connection</string>
    <string name="connection_failed">Connection failed</string>
    <string name="connection_successfull">Connection succesfull</string>
    <string name="delete">Delete</string>
    <string name="delete_database">Are you sure you want to delete this entry.</string>
    <string name="theme_default">Default</string>
    <string name="theme_django">Django</string>
    <string name="licence_retry_message">Failed to verify licence.\nPlease check your internet connection. Do you want to retry?</string>
    <string name="licence_failed_message">Failed to verify licence.\nThis means that we were unable to verify that you purchased this app.\nPlease purchase the application to continue.</string>
    <string name="retry">Retry</string>
    <string name="mssql">MSSQL</string>
</resources>
