<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_menu_overview"
            android:title="@string/overview"/>
        <item
            android:id="@+id/nav_sqlite"
            android:icon="@drawable/ic_menu_sqlite"
            android:title="@string/sqlite"/>
        <item
            android:id="@+id/nav_mysql"
            android:icon="@drawable/ic_menu_mysql"
            android:title="@string/my_sql"/>
        <!--
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/history"/>
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/favorites"/>
        -->
    </group>


    <item android:title="@string/info">
        <menu>

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about"/>

        </menu>
    </item>

</menu>
