<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <android.support.v7.widget.CardView
        style="@style/OverviewButtonCard"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.pedja1.fontwidget.widget.FTextView
                style="@style/OverviewTitle"
                android:text="@string/overview"/>

            <com.pedja1.fontwidget.widget.FTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/installed_applications"
                android:layout_marginTop="5dp"
                android:id="@+id/tvAppCount"/>

            <com.pedja1.fontwidget.widget.FTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_databases"
                android:layout_marginTop="5dp"
                android:id="@+id/tvFavCount"/>

            <com.pedja1.fontwidget.widget.FTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewed_databases"
                android:layout_marginTop="5dp"
                android:id="@+id/tvHistCount"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/OverviewButtonCard"
        android:id="@+id/btnSqlite">

        <com.pedja1.fontwidget.widget.FTextView
            style="@style/OverviewButtonText"
            android:text="@string/sqlite"
            android:drawableLeft="@drawable/ic_menu_sqlite"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/OverviewButtonCard"
        android:id="@+id/btnMySql">

        <com.pedja1.fontwidget.widget.FTextView
            style="@style/OverviewButtonText"
            android:text="@string/my_sql"
            android:drawableLeft="@drawable/ic_menu_mysql"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/OverviewButtonCard"
        android:id="@+id/btnPostgreSql">

        <com.pedja1.fontwidget.widget.FTextView
            style="@style/OverviewButtonText"
            android:text="@string/postgresql"
            android:drawableLeft="@drawable/ic_menu_postgressql"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/OverviewButtonCard"
        android:id="@+id/btnHistory">

        <com.pedja1.fontwidget.widget.FTextView
            style="@style/OverviewButtonText"
            android:text="@string/history"
            android:drawableLeft="@drawable/ic_action_history"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/OverviewButtonCard"
        android:id="@+id/btnFavorites">

        <com.pedja1.fontwidget.widget.FTextView
            style="@style/OverviewButtonText"
            android:text="@string/favorites"
            android:drawableLeft="@drawable/ic_action_favorite"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/OverviewButtonCard"
        android:id="@+id/btnCloud">

        <com.pedja1.fontwidget.widget.FTextView
            style="@style/OverviewButtonText"
            android:text="@string/cloud"
            android:drawableLeft="@drawable/ic_action_cloud"/>

    </android.support.v7.widget.CardView>

</LinearLayout>